# cargo-ai-fdocs

./: COMPATIBILITY.md  Cargo.toml  LANGUAGE_EXPANSION_TECH_SPEC.md  MANIFEST_DOCSRS_LATEST.md  Manifest.md  README.md  RELEASE.md  deny.toml
.github/workflows/: ci.yml  npm-npn.yml
cargo/: Cargo.toml
cargo/src/: config.rs  error.rs  index.rs  init.rs  main.rs  resolver.rs  status.rs  storage.rs  utils.rs
cargo/src/fetcher/: github.rs  latest.rs  mod.rs
cargo/src/processor/: changelog.rs
docs/: API_CONTRACT.md  DOCSRS_INTEGRATION_PLAN.md
docs/architecture/: npm-clone.md  rust-module.md
examples/: ai-docs.toml
npn/: COMPATIBILITY.md  README.md  RELEASING.md  ROADMAP.md  RUNBOOK.md  package-lock.json  package.json  tsconfig.json
npn/docs/benchmarks/: source-strategy-2026-02.md
npn/fixtures/check-ok/: ai-fdocs.toml  package-lock.json
npn/scripts/: benchmark-source-strategy.ts
npn/src/: changelog.ts  cli.ts  config-hash.ts  config.ts  consolidation.ts  error.ts  fetcher.ts  index.ts  net.ts  registry.ts  resolver.ts  storage.ts  summary.ts
npn/src/commands/: check.ts  init.ts  status.ts  sync.ts
npn/tests/: changelog.test.ts  check.test.ts  config-hash.test.ts  config.test.ts  consolidation.test.ts  fetcher.test.ts  init.test.ts  net.test.ts  registry.test.ts  rendering.test.ts  storage.test.ts  sync-fallback.test.ts  sync.test.ts
scripts/: fdocs-clean.sh  fdocs-sync.sh
src/: config.rs  error.rs  fetcher.rs  index.rs  init.rs  main.rs  resolver.rs  status.rs  storage.rs
src/fetcher/: github.rs  latest.rs
src/processor/: changelog.rs
vscode/: .eslintrc.json  .gitignore  CHANGELOG.md  README.md  SETUP.md  compile.bat  package-lock.json  package.json
vscode/src/: binary-manager.ts  commands.ts  dependency-tree-provider.ts  extension.ts  project-detector.ts  types.ts
(+1 files in other folders)
