[package]
name = "cargo-ai-fdocs"
version = "0.1.0"
edition = "2021"
description = "Version-locked documentation sync for AI coding assistants"
license = "MIT"

[[bin]]
name = "cargo-ai-fdocs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
