[package]
name = "cargo-ai-fdocs"
version = "0.1.0"
edition = "2021"
description = "Sync documentation from dependencies for AI context"
license = "MIT"

[[bin]]
name = "cargo-ai-fdocs"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async & HTTP
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

# Config & Data
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Error Handling & Logging
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
regex = "1.10"

serde_json = "1.0"
